--- a/SmartSchool/src/app/alunos/alunos.component.html
+++ b/SmartSchool/src/app/alunos/alunos.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-sm-6" *ngIf="alunoSelecionado.nome" >
-        <app-titulo [titulo]="'Código: ' + alunoSelecionado.id" ></app-titulo>
+    <div class="col-sm-6" *ngIf="alunoSelecionado" >
+        <app-titulo [titulo]="(alunoSelecionado.id === 0 ? 'Novo Aluno' : 'Aluno: ' + alunoSelecionado.id)"></app-titulo>
         
         <form [formGroup]="alunoForm" (submit)="alunoSubmit()">
             <div class="form-group">
@@ -16,12 +16,14 @@
                 <input type="text" formControlName="telefone" class="form-control">
             </div>
             <button id="btn-fechar" class="btn btn-outline-dark" (click)="voltar()" >Fechar</button>
-            <button class="btn btn-outline-primary" [disabled]="!alunoForm.valid">Enviar</button>
+            <button class="btn btn-outline-primary" [disabled]="!alunoForm.valid">Salvar</button>
         </form>
         
     </div>
-    <div [ngClass]="{'col-sm-6': alunoSelecionado.nome, 'col-sm-12': !alunoSelecionado.nome }">
-        <app-titulo [titulo]="titulo" ></app-titulo>
+    <div *ngIf="!alunoSelecionado || alunoSelecionado" [ngClass]="{'col-sm-6': alunoSelecionado, 'col-sm-12': !alunoSelecionado }">
+        <app-titulo [titulo]="titulo" >
+          <button class="btn btn-primary" (click)="alunoNovo()">Cadastrar Aluno</button>
+        </app-titulo>
         <table class="table table-hover">
             <thead>
               <tr>
@@ -42,7 +44,7 @@
                   <div class="btn-group">
                     <button class="btn btn-sm btn-outline-success" (click)="alunoSelect(aluno)">Detalhe</button>
                     <button class="btn btn-sm btn-outline-primary" (click)="openModal(template)">Professores</button>
-                    <button class="btn btn-sm btn-outline-danger">Desativar</button>
+                    <button class="btn btn-sm btn-outline-danger" (click)="deletarAluno(aluno.id)">Excluir</button>
                   </div>
                 </td>
               </tr>
